--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
             canvas.width = window.innerWidth;
             canvas.height = window.innerHeight;
 
-            const letters = '0101010Ew3ah0101010';
+            const letters = '0101010Ew3ah0101010Ahmed0101Ezz';
             const fontSize = 16;
             const columns = canvas.width / fontSize;
             const drops = Array(Math.floor(columns)).fill(1);
@@ -499,4 +499,5 @@
         });
     </script>
 </body>
+
 </html>
